# mlproject

./: README.md  app.py  main.py  pyproject.toml  requirements.txt  setup.py  template.py
artifact/: model.pkl  preprocessor.pkl  raw.csv  raw.csv.dvc  test.csv  test.csv.dvc  test.parquet  train.csv  train.csv.dvc  train.parquet
source/mlproject/: expection.py  logger.py  utils.py
source/mlproject/components/: data_ingestion.py  data_transformation.py  model_training.py
source/mlproject/database/: postgres.py
sql script/: Script.sql
